--- a/CommonwWeb/Views/Home/Index.cshtml
+++ b/CommonwWeb/Views/Home/Index.cshtml
@@ -32,4 +32,5 @@
             <input type="button" class="btn-download-xml" id="btn-download-xml" value="open">
             <input type="button" class="btn-download-xml" id="btn-download-xml" value="open-new-tab">
         </form>
+        <p>Post Test</p>
     </div>
